@@ -35,5 +35,7 @@ void hua_func_off(int house);
 void hua_show(int fd);
 
 unsigned char hua_getstatus(int house, int unit);
+unsigned char hua_getstatus_xdim(int house, int unit);
+void hua_setstatus_xdim(int house, int xdim);
 int hua_getstatus_sec(int rf8bitaddr, unsigned long rfaddr);
 
